--- a/DockerFile
+++ b/DockerFile
@@ -1,17 +1,8 @@
 FROM python:3.12-slim
-
 WORKDIR /app
-
-# Copy all application files to the container
 COPY . /app
 
-# Install necessary tools and Python dependencies
-RUN apt-get update -y && \
-    apt-get install -y awscli ffmpeg libsm6 libxext6 unzip && \
-    pip install --no-cache-dir -r requirements.txt
+RUN apt update -y && apt install awscli -y
 
-# Expose the application port
-EXPOSE 8080
-
-# Run the application
+RUN apt-get update && apt-get install ffmpeg libsm6 libxext6 unzip -y && pip install -r requirements.txt
 CMD ["python3", "app.py"]
